<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login_image"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_intents"
        android:text="@string/running_life"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/xxl_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/four_intents"
        android:layout_marginBottom="@dimen/two_intents"
        android:text="@string/you_are_just_join_to_running_life"
        android:textColor="@color/white"
        android:textSize="@dimen/s_text_size"
        app:layout_constraintBottom_toBottomOf="@id/loginImage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/four_intents"
        android:layout_marginBottom="@dimen/six_intents"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/m_text_size"
        app:layout_constraintBottom_toBottomOf="@id/loginImage"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage">

        <include
            android:id="@+id/progressBar"
            layout="@layout/layout_progress"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:text="@string/login_error"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/stravaConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            app:srcCompat="@drawable/ic_btn_strava_connectwith_orange" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
