<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/four_intents"
        android:layout_marginTop="@dimen/two_intents"
        android:layout_marginEnd="@dimen/four_intents"
        android:layout_marginBottom="@dimen/one_intent"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:textSize="@dimen/s_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/four_intents"
        android:layout_marginEnd="@dimen/four_intents"
        android:layout_marginBottom="@dimen/one_intent"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="textPassword"
            android:textSize="@dimen/s_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/four_intents"
        android:layout_marginTop="@dimen/two_intents"
        android:layout_marginEnd="@dimen/four_intents"
        android:layout_marginBottom="@dimen/three_intents"
        android:background="@color/colorPrimary"
        android:padding="@dimen/one_intent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/m_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <ImageButton
        android:id="@+id/googleLoginImageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/two_intents"
        android:layout_marginBottom="@dimen/three_intents"
        android:background="@color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fbLoginImageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:srcCompat="@drawable/ic_google" />

    <ImageButton
        android:id="@+id/fbLoginImageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/two_intents"
        android:layout_marginBottom="@dimen/three_intents"
        android:background="@color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/googleLoginImageButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:srcCompat="@drawable/ic_facebook" />
</androidx.constraintlayout.widget.ConstraintLayout>